Correct spacing between activity cards in the activities section.

--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ img {
 
 #activity-list {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .activity {
@@ -82,6 +82,7 @@ img {
     border: 1px solid #fff;
     border-radius: 5px;
     padding: 10px 0;
+    margin: 15px;
 }
 
 .activity-img {    
